--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 /* Logo Bild */
 .logo img {
   height: auto;   /* Logo-Größe anpassen */
-  width: 100px;
+  width: auto;
   display: block;
 }
 
